tests/toy/neg/000884_mutation.toylang
program a = { a while do sleep; } .
